<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/frameLayoutModificar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modificacion">



        <TextView
            android:id="@+id/tvIdModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            tools:text="@string/tv_id" />

        <EditText
            android:id="@+id/etIdModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_buscar" />



        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_nombre"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etNombreModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tvStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_stock"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etStockModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tvCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_categoria"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spCategoriaModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tv_categoria"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_modificar" />

</LinearLayout>